--- a/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
+++ b/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
@@ -21,6 +21,7 @@
     overflow: hidden;
     position: relative;
     cursor: pointer;
+    margin-right: 10px;
     img {
       width: 130%;
       height: auto;
@@ -30,7 +31,7 @@
       top: 50%;
       -webkit-transform: translateX(-50%);
       transform: translate(-50%, -50%);
-      z-index: -1;
+
     }
   }
 }
@@ -82,11 +83,11 @@
         color: #707683;
         a{
           color: #707683;
-        } 
+        }
       }
       &.arrow-top{
         padding-top: 5px;
-        margin-top: 10px;    
+        margin-top: 10px;
         border-top: 1px solid #EBEEFF;
       }
     }
@@ -116,8 +117,8 @@
     &.open{
       display: block;
       min-width: 150px;
-      right: -15px;
-      top: 48px;
+      right: -4px;
+      top: 50px;
     }
   }
 }
