--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -774,7 +774,7 @@ input[type=number] {
           min-height: 34px;
 
           .option-wrap {
-            justify-content: flex-end;
+            justify-content: space-between;
           }
         }
 
