--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -196,22 +196,22 @@
             <mat-radio-group class="filter-values-wrapper f-radio" [(ngModel)]="catalogFilters.maxTerm"
               (ngModelChange)="onFilterChange()" name='maxTerm' #maxTerm="ngModel">
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="">None</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="null">None</mat-radio-button>
               </div>
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="1">Экспресс за 24 часа</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="1">Экспресс за 24 часа</mat-radio-button>
               </div>
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="3">До 3 дней</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="3">До 3 дней</mat-radio-button>
               </div>
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="7">До 7 дней</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="7">До 7 дней</mat-radio-button>
               </div>
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="30">До месяца</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="30">До месяца</mat-radio-button>
               </div>
               <div class="mob-filter-values">
-                <mat-radio-button class="filter-text" value="99">Любое время</mat-radio-button>
+                <mat-radio-button class="filter-text" [value]="99">Любое время</mat-radio-button>
               </div>
             </mat-radio-group>
           </div>
@@ -223,16 +223,16 @@
           </div>
           <section class="mob-filter-values-wrapper f-checkboxs">
             <div class="mob-filter-values">
-              <mat-checkbox class="mob-filter-text" [(ngModel)]="catalogFilters.commercial" (ngModelChange)="onFilterChange()"
-              name='commercial' #commercial="ngModel">Коммерческое использование</mat-checkbox>
+              <mat-checkbox class="mob-filter-text" [(ngModel)]="catalogFilters.extraChanges" (ngModelChange)="onFilterChange()"
+              name='commercial' #commercial="ngModel">Дополнительные правки</mat-checkbox>
             </div>
             <div class="mob-filter-values">
               <mat-checkbox class="mob-filter-text" [(ngModel)]="catalogFilters.confidentiality"
               (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Конфиденциальность</mat-checkbox>
             </div>
             <div class="mob-filter-values">
-              <mat-checkbox class="mob-filter-text" [(ngModel)]="catalogFilters.agreement" (ngModelChange)="onFilterChange()"
-              name='agreement' #agreement="ngModel">Контракты и соглашения</mat-checkbox>
+              <mat-checkbox class="mob-filter-text" [(ngModel)]="catalogFilters.extraTerms" (ngModelChange)="onFilterChange()"
+              name='agreement' #agreement="ngModel">Сжатые сроки</mat-checkbox>
             </div>
           </section>
         </div>
