--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -67,8 +67,7 @@
 
                 </ng-container>
 
-                <div class="dr-dp" appDragDrop (onFileDropped)="fileProgress($event)" 
-                    placement="right" popoverClass="popover" closeDelay="200">
+                <div class="dr-dp" appDragDrop (onFileDropped)="fileProgress($event)" >
                     <div class="upload"></div>
                     <span>.JPG .PNG .GIF </span>
                     <span class="dr-dr-text">{{'file-loader.drop-files' | translate}}</span>
