dashboard adapt mobile without achivs

--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
@@ -71,7 +71,7 @@
                 <div class="chart-body">
                     <app-pie-chart-dashboard [user]="user"></app-pie-chart-dashboard>
                 </div>
-                <div>
+                <div class="pie-chart_description-wrapper">
                     <div class="compleated legend">
                         <span class="line"></span><span>{{'dashboard.cards-on-top.compleated-deals' | translate}}</span>
                     </div>
