--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/line-chart-dashboard/line-chart-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/line-chart-dashboard/line-chart-dashboard.component.html
@@ -1,3 +1,7 @@
-<canvas baseChart [datasets]="lineChartData" width="370px" height="270px" [labels]="chartLabels"
+<canvas *ngIf="!mobileGraph"baseChart [datasets]="lineChartData" width="370px" height="270px" [labels]="chartLabels"
+[options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
+[plugins]="lineChartPlugins"></canvas>
+
+<canvas *ngIf="mobileGraph" baseChart [datasets]="lineChartData" width="290px" height="270px" [labels]="chartLabels"
 [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
 [plugins]="lineChartPlugins"></canvas>
