--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -744,6 +744,11 @@
       margin-left: 30px;
     }
   }
+  .content-part{
+    &::before{
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 767.98px) {
