--- a/src/app/shared/modules/calendar/calendar.component.scss
+++ b/src/app/shared/modules/calendar/calendar.component.scss
@@ -1,6 +1,6 @@
 .calendar::ng-deep {
-  width: 290px;
-  max-width: 290px;
+  width: auto;
+  max-width: none;
   .title {
     height: 66px;
     width: 100%;
