--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -722,19 +722,19 @@
     }
   }
   .content-part{
-    width: calc(100% - 100px);
+    width: calc(100% - 80px);
     margin-left: 75px;
     position: relative;
-    &:before {
-      position: absolute;
-      content: "";
-      width: 100vw;
-      background: #649af3;
-      height: 175px;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
+    // &:before {
+    //   position: absolute;
+    //   content: "";
+    //   width: 100vw;
+    //   background: #649af3;
+    //   height: 175px;
+    //   top: 0;
+    //   left: 0;
+    //   z-index: -1;
+    // }
   }
 }
 
