--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
@@ -29,11 +29,13 @@
     height: 100%;
     margin-top: 18px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     .compressed-statistic {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        width: 100%;
         .main-statistic-carousel{
           display: flex;
           justify-content: space-between;
@@ -94,7 +96,7 @@
         }
     }
     .graphics {
-        width: 100%;
+        width: 73%;
         margin-top: 18px;
         // border: 1px solid red;
         min-height: 364px;
@@ -102,7 +104,7 @@
         display: flex;
         justify-content: space-between;
         .graphic {
-            width: 73%;
+            width: 100%;
             box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
             border-radius: 4px;
             height: 100%;
@@ -137,52 +139,54 @@
                 height: 100%;
             }
         }
-        .calendar {
-            width: 290px;
-            max-width: 290px;
-            background: #ffffff;
-            box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
-            border-radius: 4px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            .info {
-                display: flex;
-                padding: 0 20px;
-                margin-bottom: 16px;
-                div {
-                    padding-left: 20px;
-                    &:first-of-type {
-                        margin-right: 50px;
-                        span:before {
-                            background: rgba(41, 204, 151, 0.3);
-                        }
-                    }
-                    span {
-                        font-family: Source Sans Pro;
-                        font-style: normal;
-                        font-weight: normal;
-                        font-size: 13px;
-                        line-height: 16px;
-                        text-align: center;
-                        color: #707683;
-                        position: relative;
-                        &:before {
-                            position: absolute;
-                            content: "";
-                            width: 8px;
-                            height: 8px;
-                            border-radius: 50%;
-                            left: -15px;
-                            top: 60%;
-                            transform: translateY(-50%);
-                            background: rgba(253, 31, 58, 0.3);
-                        }
-                    }
-                }
-            }
-        }
+
     }
+    .calendar-wrap {
+      width: 27%;
+      // max-width: 290px;
+      background: #ffffff;
+      box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
+      border-radius: 4px;
+      margin-top: 18px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .info {
+          display: flex;
+          padding: 0 20px;
+          margin-bottom: 16px;
+          div {
+              padding-left: 20px;
+              &:first-of-type {
+                  margin-right: 50px;
+                  span:before {
+                      background: rgba(41, 204, 151, 0.3);
+                  }
+              }
+              span {
+                  font-family: Source Sans Pro;
+                  font-style: normal;
+                  font-weight: normal;
+                  font-size: 13px;
+                  line-height: 16px;
+                  text-align: center;
+                  color: #707683;
+                  position: relative;
+                  &:before {
+                      position: absolute;
+                      content: "";
+                      width: 8px;
+                      height: 8px;
+                      border-radius: 50%;
+                      left: -15px;
+                      top: 60%;
+                      transform: translateY(-50%);
+                      background: rgba(253, 31, 58, 0.3);
+                  }
+              }
+          }
+      }
+  }
     .paymenst {
         margin-top: 18px;
         width: 100%;
@@ -384,8 +388,8 @@
         display: none;
         &.laptop {
             display: inline-block;
-            width: 30%;
-            max-width: 285px;
+            width: 27%;
+            max-width: none;
             margin-right: 0px;
             margin-left: auto;
             height: auto;
@@ -404,15 +408,15 @@
             }
         }
     }
-    .user {
-        overflow: scroll;
-    }
     .statistic {
         width: 100%;
         margin-left: 18px;
-        margin-right: 18px;
+        margin-right: 0;
+        padding-right: 5px;
         flex-direction: initial;
         flex-wrap: wrap;
+        overflow: inherit;
+        overflow-y: scroll;
         .compressed-statistic {
             width: 100%;
             .statistic-item {
@@ -451,7 +455,7 @@
             }
         }
         .graphics {
-            width: 100%;
+            width: 73%;
             margin-top: 18px;
             min-height: 340px;
             max-height: 340px;
@@ -470,14 +474,17 @@
             }
         }
         .paymenst {
-            width: 70%;
-            height: auto;
-            .title {
-                padding: 12px;
-            }
-            .paymenst-list {
-                height: auto;
-            }
+          width: calc(73% - 16px);
+          height: auto;
+          .title {
+              padding: 12px;
+          }
+          .paymenst-list {
+              height: auto;
+          }
+        }
+        .calendar-wrap{
+          width: 27%;
         }
     }
 }
@@ -531,24 +538,85 @@
 }
 
 @media (max-width: 1360px) {
-    .statistic .graphics .graphic {
-        width: calc(100% - 290px)
-    }
-    .statistic .paymenst {
-        width: 73%;
-    }
+    // .statistic .graphics .graphic {
+    //     width: calc(100% - 290px)
+    // }
+    // .statistic .paymenst {
+    //     width: 73%;
+    // }
 }
 @media (max-width: 1024px) {
 
-  .statistic{
-    .compressed-statistic{
-      .statistic-item {
-        width: auto;
-        margin: 0 4px;
-      }
+  .wallet{
+    .form .count > div input{
+      width: 210px;
     }
   }
-  .statistic .paymenst {
-      width: 73%;
+
+  .statistic{
+    .compressed-statistic{
+      width: calc(100% - 50px);
+      margin: 0 auto;
+      position: relative;
+      button{
+        background-color: transparent;
+        border: block;
+        border: none;
+        width: 14px;
+        height: 14px;
+        outline: none;
+        position: absolute;
+        display: block;
+        top: 50%;
+        transform: translateY(-50%);
+        &:after{
+          position: absolute;
+          content: "";
+          min-width: 14px;
+          min-height: 14px;
+          border-bottom: 2px solid #4285F4;
+          border-right: 2px solid #4285F4;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+        &.btn-next{
+          left: -33px;
+          &:after{
+            transform: rotate(135deg) translate(-50%, 0%)
+          }
+        }
+        &.btn-prev{
+          right: -24px;
+          &:after{
+            transform: rotate(-45deg) translate(-20%, -80%);
+          }
+        }
+      }
+    }
+    .statistic-item {
+      width: auto;
+
+      margin: 0 4px;
+      outline: none;
+    }
+
+    .graphics{
+      order: 1;
+      width: 100%;
+    }
+    .calendar-wrap{
+      order: 2;
+      width: calc(50% - 8px);
+    }
+    .paymenst{
+      order: 4;
+      width: 100%;
+    }
+    .wallet {
+      order: 3;
+      width: calc(50% - 8px);
+    }
+
   }
 }
