--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -11,7 +11,7 @@
          <div class="field-block">
             <h5 class="fields-title">{{'user-settings.institution-name' | translate}}</h5>
             <input
-              class="fields-value"
+              class="fields-value institution-name"
               type="text"
               required
               #institution="ngModel"
