--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
@@ -16,6 +16,7 @@
   color: #323C47;
   margin: 0;
   margin-bottom: 3px;
+  text-transform: capitalize;
 }
 
 .fields{
@@ -332,8 +333,90 @@ button {
   }
   img {
     object-fit: contain;
-    width: 196px;
-    height: 196px;
+    width: 100%;
+    height: 100%;
     padding: 2px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .fields{
+    &-value{
+      padding: 9px;
+    }
+  }
+  .add-education{
+    height: 20px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .fields{
+    margin-bottom: 15px;
+    &-title{
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 4px;
+    }
+    &-value{
+      font-size: 14px;
+      padding: 11px;
+      &.institution-name{
+        max-width: calc(100% - 100px);
+      }
+    }
+  }
+
+  button {
+    &.change{
+      top: 33px;
+      right: 35px;
+    }
+    &.delete-education{
+      top: 31px;
+      right: -10px;
+    }
+  }
+  .field-block{
+    margin-bottom: 15px;
+  }
+  .academicBlock{
+    flex-direction: column;
+  }
+
+  //--------------------------- selects styling -----------------------------
+  .service-selects ::ng-deep{
+    mat-select {
+      font-size: 14px;
+      line-height: 18px;
+      padding: 10px 15px 10px;
+    }
+
+    .ng-star-inserted{
+      font-size: 14px;
+      line-height: 18px;
+    }
+    .mat-form-field {
+      .ng-star-inserted {
+        font-size: 14px;
+        line-height: 18px;
+      }
+    }
+  }
+  ::ng-deep .cdk-overlay-container {
+    .mat-option {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+
+  .items {
+    .img-item {
+      width: 159px;
+      height: 159px;
+    }
+  }
+  .single-education-block:after{
+    width: 100%;
   }
 }
