--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -29,7 +29,7 @@
   .field-block-multiple{
     max-width: 630px;
   }
-} 
+}
 
 .inform_section{
   form{
@@ -252,7 +252,7 @@
     }
     .field-block-multiple{
       max-width: 68%;
-    } 
+    }
     .single-education-block::after{
       width: 100%;
     }
@@ -265,7 +265,7 @@
     app-location-language-user-settings{
       .field-block-multiple{
         max-width: 100%;
-      } 
+      }
     }
   }
 }
@@ -280,3 +280,53 @@
     }
   }
 }
+
+@media (max-width: 1024px) {
+  ::ng-deep{
+    .inform_section{
+      flex-direction: column;
+      align-items: center;
+      &__title{
+        width: 100%;
+        padding: 20px 25px;
+        h3{
+          font-size: 12px;
+        }
+      }
+      &__fields{
+        width: 100%;
+        padding: 0px 20px 20px;
+      }
+    }
+    .inputs-wrapper{
+      width: 100%;
+      max-width: 425px;
+      margin: 0 auto;
+    }
+    .field-block-multiple{
+      width: 100%;
+      max-width: 425px;
+      margin: 0 auto;
+    }
+  }
+
+}
+
+@media (max-width: 767.98px) {
+  ::ng-deep{
+    .inform_section{
+      &__title{
+        padding: 35px 20px 20px;
+      }
+      &__fields{
+        padding: 0px 15px 20px;
+      }
+    }
+  }
+  .fields-title{
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 4px;
+  }
+}
+
