--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
@@ -5,7 +5,6 @@
   justify-content: flex-end;
   &:nth-child(odd) {
     width: calc(50% - 30px);
-    // margin-right: 30px;
   }
   .alert-danger{
     position: absolute;
@@ -147,6 +146,81 @@
     width: 100%;
     &.not_Valid{
       border: 1px solid #FF647C;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  // .block-title{
+  //   font-size: 12px;
+  //   line-height: 18px;
+  // }
+  .inform_section{
+    width: 100%;
+  }
+  .field-block{
+    width: 50%;
+    &:nth-child(odd) {
+      width: calc(50% - 15px);
+    }
+  }
+  .add-languahe{
+    margin-top: 25px;
+  }
+  .field-block-multiple{
+    .single-lang-wrapper{
+      margin-top: 15px;
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  .field-block{
+    width: 100%;
+    margin-bottom: 12px;
+    &:nth-child(odd) {
+      width: 100%;
+    }
+    .alert-danger{
+      bottom: -16px;
+    }
+  }
+  .fields{
+    margin-bottom: 15px;
+    &-title{
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 2px;
+    }
+    &-value{
+      font-size: 14px;
+      padding: 11px;
+    }
+  }
+  .field-block-multiple{
+    width: 100%;
+    .delete-language{
+      bottom: 20px;
+      right: 20px;
+    }
+    .block-title{
+      margin-bottom: 4px;
+    }
+    .single-lang-wrapper{
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    .field-block.language-level ::ng-deep{
+      mat-select {
+        font-size: 14px;
+        line-height: 18px;
+        padding: 10px 15px 10px;
+        max-width: calc(100% - 70px);
+      }
+      .ng-star-inserted{
+        font-size: 14px;
+        line-height: 18px;
+      }
     }
   }
 }
